# darmatch

./: CMakeLists.txt  LICENSE  README.md  README.rst  setup.py
include/: cedarpp.h  darmatch.h
python/darmatch/: __init__.py  darmatch.py  darmatch_pybind.cpp
tests/: check_text.txt  dict.txt  string_match_dict.txt  test.cpp  test_speed.py
